# lykn

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  build.js  deno.json  jsr.json  package.json  project.json
.github/workflows/: ci.yml  consumer-smoke.yml  deno-compat.yml
assets/ai/: CLAUDE-CODE-COVERAGE.md  CODE-AUDIT.md  LEDGER_DISCIPLINE.md  SKILL.md  SUBAGENT-DELEGATION-POLICY.md
crates/lykn/: Cargo.toml
crates/lykn-cli/: Cargo.toml
crates/lykn-cli/src/: bridge.rs  compile.rs  config.rs  dist.rs  doctest.rs  formatter.rs  lib.rs  main.rs  reader.rs
crates/lykn-cli/src/snapshots/: lykn_cli__dist__tests__import_rewriter_output.snap  lykn_cli__dist__tests__macro_module_deno_json.snap  lykn_cli__dist__tests__macro_module_mod_js_stub.snap  lykn_cli__dist__tests__macro_module_package_json.snap  lykn_cli__dist__tests__runtime_pkg_deno_json.snap  lykn_cli__dist__tests__runtime_pkg_package_json.snap  lykn_cli__dist__tests__workspace_project_json.snap
crates/lykn-cli/tests/: lyk_runner_kernel_only.rs  publishing_build_each_kind.rs  publishing_cross_package.rs  publishing_dry_run.rs  publishing_real_packages.rs  source_context_path_routing.rs
crates/lykn-lang/: Cargo.toml
crates/lykn-lang/src/: error.rs  lib.rs
crates/lykn-lang/src/analysis/: func_check.rs  maranget.rs  match_check.rs  mod.rs  pattern.rs  prelude.rs  scope.rs  type_registry.rs
crates/lykn-lang/src/ast/: mod.rs  sexpr.rs  surface.rs
crates/lykn-lang/src/classifier/: dispatch.rs  forms.rs  mod.rs
crates/lykn-lang/src/codegen/: emit.rs  icu.rs  mod.rs
crates/lykn-lang/src/diagnostics/: mod.rs  serializer.rs
crates/lykn-lang/src/emitter/: context.rs  dts.rs  forms.rs  gensym.rs  mod.rs  type_checks.rs
crates/lykn-lang/src/expander/: cache.rs  deno.rs  embedded.rs  env.rs  mod.rs  pass0.rs  pass1.rs  pass2.rs
crates/lykn-lang/src/reader/: lexer.rs  mod.rs  parser.rs  source_loc.rs
crates/lykn-lang/tests/: cross_compiler.rs  e2e_tests.rs  icu_cross_compiler_tests.rs  macro_expansion.rs
docs/design/: index.md
docs/dev/: 0002-plan-dd-28-project-restructure-workspace-convention-and-cli-wrapper.md  0003-plan-rename-packageslykn-packageslang-lyknlang.md  0020-dd-50.7-fix-dd-50-emission-for-downstream.md  0021-dd-53-implementation-prompt-for-cc-v-08-sibling-fetch-for-surface-macros.md  0022-dd-37-readiness-review-preparatory-notes.md  0023-m16-implementation-prompt-for-cc-cross-compiler-hygiene.md  0024-if-profile-audit-pattern-for-special-case-intercepts.md
docs/guides/: 00-lykn-surface-forms.md  01-core-idioms.md  03-error-handling.md  05-type-discipline.md  06-functions-closures.md  07-async-concurrency.md  08-performance.md  09-anti-patterns.md  10-project-structure.md  15-lykn-cli.md  17-template-and-i18n.md
examples/: browser-api.html  browser-app.lykn  browser-src.html  browser.html  main.js  main.lykn
examples/kernel/: browser-api.html  browser-macros.html  browser-src.html  browser.html
examples/surface/: browser-app.lykn  browser-macros.html  browser-quotes.html  browser-quotes.lykn  browser-src.html  browser.html  i18n-notifications.lykn  main.js  main.lykn  showcase.js  showcase.lykn
scripts/: bundle-size.js
src/: compiler.js  expander.js  index.d.ts  index.js  lykn-browser.js  reader.js  surface.js
test/expander/: as-pattern.test.js  ast-api.test.js  auto-gensym.test.js  auto-gensym_test.lykn  expansion-walk.test.js  gensym-fn.test.js  gensym-fn_test.lykn  import-macros.test.js  import-macros_test.lykn  macro-basic.test.js  macro-errors.test.js  macro-errors_test.lykn  macro-module-chain.test.js  (+13 more)
(+285 files in other folders)
