[package]
name = "lykn-cli"
version = "0.0.1"
edition = "2024"
description = "S-expression syntax for JavaScript — linter, formatter, and REPL"
license = "Apache-2.0"
repository = "https://github.com/oxur/lykn"
keywords = ["lisp", "javascript", "s-expression", "compiler", "formatter"]
categories = ["compilers", "development-tools", "command-line-utilities"]

[[bin]]
name = "lykn"
path = "src/main.rs"
