[package]
name = "lykn-cli"
version = "0.4.0"
edition = "2024"
description = "S-expression syntax for JavaScript — linter, formatter, and REPL"
license = "Apache-2.0"
repository = "https://github.com/oxur/lykn"
keywords = ["lisp", "javascript", "s-expression", "compiler", "formatter"]
categories = ["compilers", "development-tools", "command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive"] }
lykn-lang = { path = "../lykn-lang", version = "0.4.0" }

[lib]
name = "lykn_cli"
path = "src/lib.rs"

[[bin]]
name = "lykn"
path = "src/main.rs"
