[package]
name = "lykn-cli"
version = "0.5.2"
edition = "2024"
description = "Lykn language CLI — scaffolding, building, testing, and publishing for Lykn projects"
license = "Apache-2.0"
repository = "https://github.com/lykn-lang/lykn"
keywords = ["lisp", "javascript", "s-expression", "compiler", "formatter"]
categories = ["compilers", "development-tools", "command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive"] }
indexmap = { version = "2", features = ["serde"] }
lykn-lang = { path = "../lykn-lang", version = "0.5.2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[lib]
name = "lykn_cli"
path = "src/lib.rs"

[dev-dependencies]
insta = { version = "1", features = ["json", "redactions"] }
tempfile = "3"

[[bin]]
name = "lykn"
path = "src/main.rs"
