[package]
name = "lykn-lang"
version = "0.4.0"
edition = "2024"
description = "lykn language toolchain library — reader, AST, classifier, diagnostics"
license = "Apache-2.0"
repository = "https://github.com/oxur/lykn"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
