[package]
name = "lykn-lang"
version = "0.5.2"
edition = "2024"
description = "Lykn language toolchain library — reader, AST, classifier, diagnostics"
license = "Apache-2.0"
repository = "https://github.com/lykn-lang/lykn"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
