[package]
name = "lykn"
version = "0.2.0"
edition = "2024"
description = "S-expression syntax for JavaScript"
license = "Apache-2.0"
repository = "https://github.com/oxur/lykn"
keywords = ["lisp", "javascript", "s-expression", "compiler", "formatter"]
categories = ["compilers", "development-tools"]

[dependencies]
lykn-cli = { path = "../lykn-cli", version = "0.1.0" }
