[package]
name = "lykn"
version = "0.5.2"
edition = "2024"
description = "A modern Lisp for ECMAScript, the browser, and the Deno JavaScript runtime"
license = "Apache-2.0"
repository = "https://github.com/lykn-lang/lykn"
keywords = ["lisp", "javascript", "s-expression", "compiler", "formatter"]
categories = ["compilers", "development-tools"]

[dependencies]
lykn-cli = { path = "../lykn-cli", version = "0.5.2" }
